--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -3,8 +3,48 @@ slug: /
 sidebar_position: 1
 ---
 
-# 基本使用
+# 介绍
+
+## 基本使用
 
 import Basic from '@site/examples/basic';
 
 <Basic />
+
+## 计划
+
+**基础系统**
+
+- [ ] Canvas 渲染器
+- [ ] WebGL 渲染器
+
+**渲染相关**
+
+- [ ] Node 基础节点的渲染，节点树相关操作
+- [ ] Stage 舞台节点渲染
+- [ ] Scene 场景节点渲染，场景切换逻辑
+- [ ] Sprite 精灵图渲染
+- [ ] Text 文本渲染
+- [ ] BitmapText 位图字体文本渲染
+
+**动画相关**
+
+- [ ] Tween 缓动方法
+- [ ] SpriteAnimate 帧动画
+- [ ] Svga 动画支持
+
+**媒体相关**
+
+- [ ] Audio 音频播放
+- [ ] Video 视频播放
+
+**事件系统**
+
+- [ ] 用户多点触控事件支持
+- [ ] 发布订阅事件总线支持
+
+**其他**
+
+- [ ] 物理引擎支持
+- [ ] 数学基础库支持
+- [ ] 部分游戏算法支持
